New translations jmavsim.md (Bulgarian)